k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: gitops-demo-service
  namespace: gitops-demo

spec:
  selector:
    app: gitops-demo

  ports:
  - port: 80
    targetPort: 8081

  type: LoadBalancer
